# 9x

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  TODO.txt  UPGRADE_TODO.txt  build.bat  build.zig  justfile  rpi_serial_run.txt  shell.nix
kernel/: .gitignore  Cargo.toml  build.rs  build.zig  build_acpica.zig
kernel/boot/efi/src/: allocation.zig  core_graphics.zig  elf.zig  logging.zig  main.zig  text_lib.zig  x86_64.zig
kernel/boot/multiboot2/: build.zig
kernel/boot/multiboot2/src/: elf.zig  entry.s  logging.zig  main.zig  multiboot2.zig  serial.zig
kernel/crates/define-asm-symbol/: Cargo.toml
kernel/src/: arch.zig  core_graphics.rs  core_graphics.zig  cpio.zig  debug.rs  debug_elf.zig  debugging.rs  debugging.zig  elf.zig  fmt.zig  heap.rs  heap.zig  logging.zig  main.rs  main.zig  misc.zig  process.rs  process.zig  resource.zig  scheduling.zig  smp.zig  text_lib.zig  vfs.zig  virtual_memory_allocation.zig  zig_extensions.zig
kernel/src/arch/: aarch64.zig  arm.zig  mod.rs  riscv64.zig  x86_64.zig
kernel/src/arch/aarch64/: common.zig
kernel/src/arch/arm/: common.zig
kernel/src/arch/riscv64/: common.zig  entry.S  serial.zig
kernel/src/arch/x86_64/: Ps2Keyboard.zig  apic.rs  apic.zig  bochs_debug.zig  clock_manager.zig  common.zig  cpuid.rs  cpuid.zig  exceptions.s  features.zig  gdt.zig  idt.zig  init.s  interrupts.rs  interrupts.s  interrupts.zig  limine.zig  limine_entry.zig  limine_requests.s  mod.rs  page_allocation.rs  page_allocation.zig  paging.zig  ps2_8042_controller.zig  ps2_manager.zig  serial.zig  syscall.rs  syscall.s  syscall.zig  task.s  task.zig  tls.rs  tls.zig  tss.rs  tss.zig  user_page_mapping.zig  virtual_page_mapping.rs  virtual_page_mapping.zig
kernel/src/config/: arch.zig  config.zig  efi.zig
kernel/src/config/arch/: x86_64.zig
kernel/src/platform/: acpi.zig  raspberry_pi.zig
kernel/src/platform/acpi/: acpica.zig  acpica_9x.zig  acpica_functions.zig  acpica_os_layer.rs  acpica_sys.rs  acpica_types.zig  mod.rs
kernel/src/platform/raspberry_pi/: atags.zig  mmio.zig  rpi_entry.zig  rpi_entry_32.s  rpi_entry_64.s  serial.zig
kernel/src/zig_extensions/: Interface.zig  overridable_properties.zig
kernel/targets/: x86_64-unknown-kernel.ld
kernel_rust/: Cargo.toml  build.rs
kernel_rust/crates/define-asm-symbol/: Cargo.toml
kernel_rust/crates/define-asm-symbol/src/: lib.rs
kernel_rust/src/: cpio.rs  debugging.rs  heap.rs  lib.rs  logging.rs  physical_block_allocator.rs  process.rs  terminal.rs  vma.rs
kernel_rust/src/arch/: mod.rs
kernel_rust/src/arch/x86_64/: apic.rs  bochs_debug.rs  cpuid.rs  gdt.rs  idt.rs  init.rs  interrupts.rs  (+9 more)
kernel_rust/targets/: x86_64-unknown-kernel.json  x86_64-unknown-kernel.ld
(+57 files in other folders)
