[workspace]
members = ["crates/define-asm-symbol"]

[workspace.dependencies]
define-asm-symbol = { path = "crates/define-asm-symbol", version = "0.1.0" }

[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
name = "kernel"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
bitfield = "0.19"
bitflags = "2.9"
define-asm-symbol.workspace = true
log = "0.4"
spin = { version = "0.10", default-features = false, features = [ "mutex", "use_ticket_mutex" ] }
thiserror = { version = "2.0", default-features = false }
# unwinding = { version = "0.2", default-features = false, features = [ "unwinder", "fde-static", "personality", "panic", "dwarf-expr" ] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
