[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "kernel"
crate-type = [ "staticlib" ]
test = false
bench = false

[dependencies]
define-asm-symbol = { workspace = true }
bitfield = "0.14"
bitflags = "1.3"
memoffset = { version = "0.7", features = [ "unstable_const" ] }
spin = { version = "0.9", default-features = false, features = [ "mutex", "use_ticket_mutex" ] }
log = "0.4"
thiserror-no-std = "2.0"
# unwinding = { version = "0.1", default-features = false, features = [ "unwinder", "fde-static", "personality", "panic", "dwarf-expr" ] }

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[workspace]
resolver = '2'
members = [ "crates/define-asm-symbol" ]

[workspace.dependencies]
define-asm-symbol = { path = "crates/define-asm-symbol", version = "0.1.0" }
